fixing warning css from bleeding ovder to excessive character count
https://www.pivotaltracker.com/story/show/46095741

--- a/app/assets/stylesheets/admin/alerts.scss
+++ b/app/assets/stylesheets/admin/alerts.scss
@@ -49,7 +49,7 @@ $notice-border-color: #39b54a;
   }
 }
 
-.warning {
+p.warning {
   color: $alert-border-color;
   font-size: 1.2em;
   font-weight: bold;
